#
#--------------------------------------------------------------------------
#
#		CHANGE LOG FOR THE LATEX2HTML RELEASE
#
# What is recorded here are changes to any file of the LaTeX2HTML release
# *meaningful to the user*, such as new options or files, important bug
# fixes etc.
# A more detailed log history can be found within the particular files, near
# the top.
#
#		- Reproducible output.
#		 -- Alexis Bienvenüe <pado@passoire.fr>  Fri, 10 Jun 2016
#		- handle relative path in \includegraphics
#		- perl5.22-defined-array.patch
#		- perl5.22-unescaped-left-braces.patch
#		- using-multipage-options-should-use-zeropadding.patch
#		- less verbose credits in output
#		  https://bugs.debian.org/144034
#		- handle \newcommand with no braces around command name
#		- use curly quotes in html 4
#		- add hyperref.perl: process \href command
#		- docs/Makefile: use html.sty included in this package
#               - latex2html.pin: keep newline before comment
#		  https://www.tug.org/pipermail/latex2html/2016-May/003953.html
#
#--------- v2016
#
#               - config: fix parsing of version number for pnmcrop
#               - config: fix uninitialized argument in error messages
#		- longtable: fix duplicate caption
#		  https://bugs.debian.org/310702
#               - pstoimg: fix pstoimg -depth 24 -flip cw
#		  https://bugs.debian.org/612126
#
#--------- v2015 apply patches from Debian
#
#		- add-abnt.patch
#		- add-floatflt-ins.patch
#		- add-url.patch
#		- eurosym.patch
#		- fix-gs-stderr.patch
#		- fix-image-types.patch
#		- fix-mathend-mark.patch
#		- fix-pdfoutput.patch
#		- fix-romanian.patch
#		- fix-spaces-in-filenames.patch
#		- fix-typos.patch
#		- html-version-4.patch
#		- l2hconf-fix-shebang.patch
#		- latex2html-fix-authoraddress.patch
#		- latex2html-fix-defined.patch
#		- makefiles-fixes.patch
#		- manpages.patch
#		- manual-fix-address.patch
#		- match-multiline.patch
#		- override-dvips-dot-in-filename-problem.patch